Initial commit - taken over from pstyling

--- a/main.tex
+++ b/main.tex
@@ -4,11 +4,10 @@
 % Persistent %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{pstyling}
 
-\author{Samuel Mahler, Mat.-Nr: 377993\thanks{samuel.mahler@rwth-aachen.de}\ ,
-		\and Jonas Colve, Mat.Nr: 377593\thanks{jonas.colve@rwth-aachen.de}\ ,
-		\and Philipp Rosendahl, Mat.Nr: 378092\thanks{philipp.rosendahl@rwth-aachen.de}}
+\author{Samuel Mahler, Mat.-Nr: 987654\thanks{samuel.mahler@rwth-aachen.de}\ ,
+		\and Le Catal, Mat.Nr: 123456\thanks{jonas.colve@rwth-aachen.de}}
 
-\pSetShortAuthor{377993, 377593 \& 378092}
+\pSetShortAuthor{987654 \& 123456}
 
 \pSetSectionPrefix{Exercise}
 \pSetTitlePrefix{Exercise Sheet}
@@ -22,7 +21,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Modify %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\pSetLongSubject{Theoretical Solid State Physics} \pSetShortSubject{TSS}
+\pSetLongSubject{pstyling X development} \pSetShortSubject{psx-dev}
 
 \pSetTitleNumber[1]
 
