--- a/main.tex
+++ b/main.tex
@@ -2,28 +2,28 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Persistent %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{pstyling}
+\usepackage{pstylingx}
 
 \author{Samuel Mahler, Mat.-Nr: 987654\thanks{samuel.mahler@rwth-aachen.de}\ ,
 		\and Le Catal, Mat.Nr: 123456\thanks{jonas.colve@rwth-aachen.de}}
 
-\pSetShortAuthor{987654 \& 123456}
+\title{dummy}
+%\pSetShortAuthor{987654 \& 123456}
 
-\pSetSectionPrefix{Exercise}
-\pSetTitlePrefix{Exercise Sheet}
+%\pSetSectionPrefix{Exercise}
+%\pSetTitlePrefix{Exercise Sheet}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Temporary binds - to be deleted for the next assignment %%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\ob}[1]{\overline{#1}}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Modify %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\pSetLongSubject{pstyling X development} \pSetShortSubject{psx-dev}
+%\pSetLongSubject{pstyling X development} \pSetShortSubject{psx-dev}
 
-\pSetTitleNumber[1]
+%\pSetTitleNumber[1]
 
 % \pSetCorrected
 
@@ -42,15 +42,15 @@
 
 \newpage
 
-\psection
+%\psection
 
 \import{}{A1.tex}
 
-\psection
+%\psection
 
 \import{}{A2.tex}
 
-\psection
+%\psection
 
 \import{}{A3.tex}
 
