--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 \usepackage{pstylingx}
 
 \author{Samuel Mahler, Mat.-Nr: 987654\thanks{samuel.mahler@rwth-aachen.de}\ ,
-		\and Le Catal, Mat.Nr: 123456\thanks{jonas.colve@rwth-aachen.de}}
+		\and Le Catal, Mat.Nr: 123456\thanks{le.catal@rwth-aachen.de}}
 
 \title{dummy}
 %\pSetShortAuthor{987654 \& 123456}
